# localgrep

./: .gitignore  README.md  SPEC.md  benchmark.py  benchmark_algorithms.py  benchmark_models.py  benchmark_results.json  benchmark_strategies.py  pyproject.toml  setup.sh
src/localgrep/: __init__.py  analytics.py  chunker.py  cli.py  config.py  crawler.py  dashboard.py  embedder.py  server.py  store.py
tests/: test_chunker.py  test_config.py  test_crawler.py  test_e2e.py  test_embedder.py  test_store.py
